--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -8,6 +8,15 @@ body {
   font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
 }
 
+canvas {
+  padding-left: 0;
+  padding-right: 0;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+  width: 800px;
+}
+
 /* General & 'Reset' Stuff */
 
 .container {
